# noti-peek

./: .gitignore  .impeccable.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design-system.md  next-level-plan.md  prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-backend.yml  release.yml
app/: .env.example  .env.production  package.json
app/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/_source/: .gitignore  regen.sh
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: DayStream.tsx  DetailPane.tsx  Footer.test.tsx  Footer.tsx  Header.tsx  NotificationDetail.tsx  NotificationItem.tsx  NotificationList.tsx  Settings.tsx  StatusBar.tsx  SuggestedLinks.tsx  ThemeSwitcher.tsx  TopNav.tsx
app/src/components/DetailPane/: ActionsBar.tsx  CommentsSection.tsx  (+6 more)
app/src/context/: theme.tsx
app/src/hooks/: usePulse.ts  useUpdater.ts
app/src/lib/: api.ts  days.ts  db.ts  notification-labels.ts  notify.ts  preserve-read.test.ts  preserve-read.ts  rows.ts  sanitize.ts  telemetry-events.ts  telemetry.ts  types.ts  view.test.ts  view.ts
app/src/store/: index.ts  pulse.ts  theme.test.ts
app/src/styles/: base.css  daystream.css  detail.css  footer.css  pulse.css  sidebar.css  tokens.css  topnav.css  utility.css
backend/: .dev.vars.example  .gitignore  package.json  tsconfig.build.json  vitest.config.ts  wrangler.toml
backend/migrations/: 0001_initial.sql  0002_oauth_states.sql  0003_work_links.sql
backend/src/: index.ts
backend/src/middleware/: auth.ts  rateLimiter.ts
backend/src/routes/: attachments.ts  auth.test.ts  auth.ts  connections.ts  links.test.ts  links.ts  notifications.test.ts  notifications.ts  users.ts
backend/src/services/: bitbucket.test.ts  bitbucket.ts  bundling.test.ts  bundling.ts  cross-bundling.test.ts  cross-bundling.ts  github-detail.test.ts  github-detail.ts  github-urls.test.ts  github-urls.ts  github.ts  jira-attachment.ts  jira-detail.test.ts  jira-detail.ts  jira-dev-panel.test.ts  jira-dev-panel.ts  jira.test.ts  jira.ts  linear-attachments.test.ts  linear-attachments.ts  linear.ts  work-links-repo.test.ts  work-links-repo.ts
backend/src/types/: index.ts
docs/: backend-deploy.md  deploy-e2e.md  integrations-setup.md  notes.md  phase-0-reliability.md  production-checklist.md  release-setup.md  smart-bundling.md  telemetry-setup.md
landing/: index.html  privacy.html  security.html  terms.html
landing/.well-known/: security.txt
(+34 files in other folders)
