[package]
name = "noti-peek"
version = "0.5.0"
description = "A unified notification hub for developers"
authors = ["Rohith Gilla <gillarohith1@gmail.com>"]
license = "MIT"
repository = "https://github.com/Rohithgilla12/noti-peek"
homepage = "https://notipeek.dev"
edition = "2021"

[lib]
name = "noti_peek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
